<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/me_diga_seu_nome" />

        <EditText
            android:id="@+id/nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/seu_nome" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/telefone" />

        <EditText
            android:id="@+id/telefone_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/modelo_telefone" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/voc_quer_tirar_uma_foto" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/acione_a_c_mera_para_tirar_uma_foto"/>
    </LinearLayout>

    <Button
        android:id="@+id/botao_atualizar_dados_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        />

</LinearLayout>